init: Initial commit - branch is not working